--- a/t02/index.html
+++ b/t02/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-	<title>Sort table</title>
-	<meta name="description" content="t02. Sort table">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/script.js"defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>Sort table</title>
+    <meta name="description" content="t08. Sort table">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 
- <body>
- 	<main>
- 		<h1>Sort table</h1>
- 		<div id="placeholder">Placeholder with <b>HTML</b></div>
- 		<div id="notification">Click on cell to sort the column</div>
- 	</main>
- </body>
+<body>
+    <main>
+        <h1>Sort table</h1>
+        <div id="placeholder">Placeholder with <b>HTML</b></div>
+        <div id="notification">Click on cell to sort the column</div>
+    </main>
+</body>
 
- </html>
- 
+</html>
