web_sprint04 yvovnenko

--- a/t05/index.html
+++ b/t05/index.html
@@ -3,24 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta name="description" content="t03. Drag'n'Drop Stones">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="description" content="t05. Drag'n'Drop Stones">
   <link rel="stylesheet" href="css/style.css">
   <title>Drag'n'Drop Stones</title>
 </head>
 
 <body>
-<h1>Drag'n'Drop Stones</h1>
+  <h1>Drag'n'Drop Stones</h1>
 
-<div class="block red"></div>
-<div class="block green"></div>
-<div class="block blue"></div>
-<div class="block purple"></div>
-<div class="block yellow"></div>
-<div class="block orange"></div>
+  <div class="block red"></div>
+  <div class="block green"></div>
+  <div class="block blue"></div>
+  <div class="block purple"></div>
+  <div class="block yellow"></div>
+  <div class="block orange"></div>
 
-<script src="js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
