--- a/t02/index.html
+++ b/t02/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Sort table</title>
-    <meta name="description" content="t08. Sort table">
+    <meta name="description" content="t02. Sort table">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
